# mcp/src/flagsmith_mcp/openapi.json
@@ -7782,6 +7782,14 @@
           "environment": {
             "type": "integer"
           },
+          "environment_api_key": {
+            "type": "string",
+            "readOnly": true
+          },
+          "environment_name": {
+            "type": "string",
+            "readOnly": true
+          },
           "source_type": {
             "$ref": "#/components/schemas/SourceTypeEnum"
           },
